feat: add automq env
Signed-off-by: KaimingWan <kaiming.wan@automq.com>